--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -10,10 +10,10 @@
 
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fa fa-group"></i> <%= t(:listing_groups) %></div>
+    <i class="fa fa-group"></i> <%= t(:listing_templates) %></div>
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+      <table class="table table-bordered" width="100%" cellspacing="0">
         <thead>
           <tr>
             <th>Name</th>
@@ -36,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Template', new_template_path %>
+<%= link_to t(:new_template), new_template_path %>
