--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,10 +11,38 @@
 
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Members:</strong>
-  <%= @group.users %>
-</p>
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fa fa-group"></i> <%= t(:members) %></div>
+    <div class="card-body">
+      <% if @group.users.any? %>
+      <div class="table-responsive">
+        <table class="table table-bordered" width="100%" cellspacing="0">
+          <thead>
+            <tr>
+              <th><%= t(:first_name) %></th>
+              <th><%= t(:last_name) %></th>
+              <th><%= t(:email) %></th>
+              <th><%= t(:role) %></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @group.users.each do |user| %>
+            <tr>
+              <td><%= user.first_name %></td>
+              <td><%= user.last_name %></td>
+              <td><%= user.email %></td>
+              <td><%= user.role %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <% else %>
+      <p>Bu grupta hiçbir kullanıcı yok.</p>
+      <% end %>
+    </div>
+  </div>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+  <%= link_to 'Edit', edit_group_path(@group) %> |
+  <%= link_to 'Back', groups_path %>
