--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -158,6 +158,11 @@
           </div>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/users/edit">
+            <i class="fa fa-fw fa-gear"></i> <%= t(:account_settings) %>&nbsp;&nbsp;&nbsp;
+          </a>
+        </li>
+        <!-- <li class="nav-item">
           <form class="form-inline my-2 my-lg-0 mr-lg-2">
             <div class="input-group">
               <input class="form-control" type="text" placeholder="Search for...">
@@ -168,7 +173,7 @@
               </span>
             </div>
           </form>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" data-toggle="modal" data-target="#logoutModal">
             <i class="fa fa-fw fa-sign-out"></i><%= t(:logout) %></a>
