--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,52 +1,56 @@
-<%= form_with(model: product, local: true) do |form| %>
-  <% if product.errors.any? %>
+<center class="card">
+  <div class="card-body" style="width: 50%">
+    <%= form_with(model: product, local: true) do |form| %>
+    <% if product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
       <ul>
-      <% product.errors.full_messages.each do |message| %>
+        <% product.errors.full_messages.each do |message| %>
         <li><%= message %></li>
-      <% end %>
+        <% end %>
       </ul>
     </div>
-  <% end %>
+    <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :product_name %>
-  </div>
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, id: :product_name %>
+    </div>
 
-  <div class="field">
-    <%= form.label :template_id %>
-    <%= form.text_field :template_id, id: :product_template_id %>
-  </div>
+    <div class="form-group">
+      <%= form.label :template_id %>
+      <%= form.text_field :template_id, id: :product_template_id %>
+    </div>
 
-  <div class="field">
-    <%= form.label :company %>
-    <%= form.text_field :company, id: :product_company %>
-  </div>
+    <div class="form-group">
+      <%= form.label :company %>
+      <%= form.text_field :company, id: :product_company %>
+    </div>
 
-  <div class="field">
-    <%= form.label :properties %>
-    <%= form.text_area :properties, id: :product_properties %>
-  </div>
+    <div class="form-group">
+      <%= form.label :properties %>
+      <%= form.text_area :properties, id: :product_properties %>
+    </div>
 
-  <div class="field">
-    <%= form.label :year %>
-    <%= form.number_field :year, id: :product_year %>
-  </div>
+    <div class="form-group">
+      <%= form.label :year %>
+      <%= form.number_field :year, id: :product_year %>
+    </div>
 
-  <div class="field">
-    <%= form.label :warranty %>
-    <%= form.number_field :warranty, id: :product_warranty %>
-  </div>
+    <div class="form-group">
+      <%= form.label :warranty %>
+      <%= form.number_field :warranty, id: :product_warranty %>
+    </div>
 
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.number_field :status, id: :product_status %>
-  </div>
+    <div class="form-group">
+      <%= form.label :status %>
+      <%= form.text_field :status, id: :product_status %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
+    <div class="actions">
+      <%= form.submit %>
+    </div>
+    <% end %>
   </div>
-<% end %>
+</center>
