--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,10 +10,14 @@
 
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fa fa-cube"></i> <%= t(:listing_products) %></div>
+    <i class="fa fa-cube"></i> <%= t(:listing_products) %>
+    <div class="pull-right">
+      <%= link_to t(:new_product), new_product_path, class: "btn btn-sm btn-primary" %>
+    </div>
+  </div>
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+      <table class="table table-bordered" width="100%" cellspacing="0">
         <thead>
           <tr>
             <th>Name</th>
@@ -46,7 +50,3 @@
     </div>
   </div>
 </div>
-
-<br>
-
-<%= link_to t(:new_product), new_product_path %>
