--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -44,5 +44,4 @@
     </div>
   </div>
 
-  <%= link_to 'Edit', edit_group_path(@group) %> |
-  <%= link_to 'Back', groups_path %>
+  <%= link_to 'Edit', edit_group_path(@group) %>
