--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,41 +15,42 @@
 
     <div class="form-group">
       <%= form.label :name %>
-      <%= form.text_field :name, id: :product_name %>
+      <%= form.text_field :name, id: :product_name, class: "form-control" %>
     </div>
 
     <div class="form-group">
       <%= form.label :template_id %>
-      <%= form.text_field :template_id, id: :product_template_id %>
+      <%= form.collection_select :template_id, @templates, :id, :name, {}, class: "form-control" %>
     </div>
 
     <div class="form-group">
       <%= form.label :company %>
-      <%= form.text_field :company, id: :product_company %>
+      <%= form.text_field :company, id: :product_company, class: "form-control" %>
     </div>
 
     <div class="form-group">
       <%= form.label :properties %>
-      <%= form.text_area :properties, id: :product_properties %>
+      <%= form.text_area :properties, id: :product_properties, class: "form-control" %>
     </div>
 
     <div class="form-group">
       <%= form.label :year %>
-      <%= form.number_field :year, id: :product_year %>
+      <%= form.number_field :year, id: :product_year, class: "form-control" %>
     </div>
 
     <div class="form-group">
       <%= form.label :warranty %>
-      <%= form.number_field :warranty, id: :product_warranty %>
+      <%= form.number_field :warranty, id: :product_warranty, class: "form-control" %>
     </div>
 
     <div class="form-group">
       <%= form.label :status %>
-      <%= form.text_field :status, id: :product_status %>
+      <%= form.select :status, Product.statuses.keys.map { |status| [ t(status.humanize), status ] }, {}, class: "form-control" %>
+      <!-- <%= form.text_field :status, id: :product_status, class: "form-control" %> -->
     </div>
 
-    <div class="actions">
-      <%= form.submit %>
+    <div class="form-group">
+      <%= form.submit nil, class: "btn btn-primary" %>
     </div>
     <% end %>
   </div>
