--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -11,5 +11,4 @@
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Show', @product %>
