--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,27 +20,24 @@
       <table class="table table-bordered" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Template</th>
-            <th>Company</th>
-            <th>Properties</th>
-            <th>Year</th>
-            <th>Warranty</th>
-            <th>Status</th>
-            <th colspan="3"></th>
+            <th><%= t(:product_name) %></th>
+            <th><%= t(:template) %></th>
+            <th><%= t(:company) %></th>
+            <th><%= t(:year) %></th>
+            <th><%= t(:warranty) %></th>
+            <th><%= t(:status) %></th>
+            <th colspan="2"></th>
           </tr>
         </thead>
         <tbody>
           <% @products.each do |product| %>
             <tr>
-              <td><%= product.name %></td>
+              <td><b><u><%= link_to product.name, product %></u></b></td>
               <td><%= product.template.name %></td>
               <td><%= product.company %></td>
-              <td><%= product.properties %></td>
               <td><%= product.year %></td>
               <td><%= product.warranty %></td>
-              <td><%= product.status %></td>
-              <td><%= link_to 'Show', product %></td>
+              <td><%= t(product.status) %></td>
               <td><%= link_to 'Edit', edit_product_path(product) %></td>
               <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: t(:are_you_sure) } %></td>
             </tr>
