--- a/app/views/templates/edit.html.erb
+++ b/app/views/templates/edit.html.erb
@@ -11,5 +11,4 @@
 
 <%= render 'form', template: @template %>
 
-<%= link_to 'Show', @template %> |
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Show', @template %>
