--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -10,7 +10,11 @@
 
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fa fa-group"></i> <%= t(:listing_templates) %></div>
+    <i class="fa fa-group"></i> <%= t(:listing_templates) %>
+    <div class="pull-right">
+      <%= link_to t(:new_template), new_template_path, class: "btn btn-sm btn-primary" %>
+    </div>
+  </div>
   <div class="card-body">
     <div class="table-responsive">
       <table class="table table-bordered" width="100%" cellspacing="0">
@@ -23,7 +27,7 @@
         <tbody>
           <% @templates.each do |template| %>
             <tr>
-              <td><%= link_to template.name, template %></td>
+              <td><b><u><%= link_to template.name, template %></u></b></td>
               <td><%= link_to t(:edit), edit_template_path(template) %></td>
               <td><%= link_to t(:delete), template, method: :delete, data: { confirm: t(:are_you_sure) } %></td>
             </tr>
@@ -33,7 +37,3 @@
     </div>
   </div>
 </div>
-
-<br>
-
-<%= link_to t(:new_template), new_template_path %>
