--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -14,5 +14,4 @@
   <%= @template.properties %>
 </p>
 
-<%= link_to 'Edit', edit_template_path(@template) %> |
-<%= link_to 'Back', templates_path %>
+<%= link_to 'Edit', edit_template_path(@template) %>
