--- a/app/assets/stylesheets/panel/panel.scss
+++ b/app/assets/stylesheets/panel/panel.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the panel controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+td {
+  text-align: center;
+  a {
+    color: #000;
+    font-weight: bold;
+    text-decoration: underline;
+  }
+}
+
+.notice {
+  display: none;
+}
+
+.alert {
+  display: none;
+}
