--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -44,10 +44,14 @@
     </div>
 
     <div class="form-group">
-      <%= form.label :status %>
-      <%= form.select :status, Product.statuses.keys.map { |status| [ t(status.humanize), status ] }, {}, class: "form-control" %>
-      <!-- <%= form.text_field :status, id: :product_status, class: "form-control" %> -->
+      <%= form.label :warranty_end %>
+      <%= form.date_field :warranty_end, id: :product_warranty_end, class: "form-control" %>
     </div>
+
+    <!-- <div class="form-group">
+      <%= form.label :status %>
+      <%= form.select :status, Product.statuses.keys.map { |status| [ t(status), status ] }, {}, class: "form-control" %>
+    </div> -->
 
     <div class="form-group">
       <%= form.submit nil, class: "btn btn-primary" %>
