--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,9 @@
-<!-- Breadcrumbs-->
 <ol class="breadcrumb">
   <li class="breadcrumb-item">
     <a href="/"><%= t(:dashboard) %></a>
   </li>
   <li class="breadcrumb-item active"><%= t(:products) %></li>
 </ol>
-
-<p id="notice"><%= notice %></p>
 
 <div class="card mb-3">
   <div class="card-header">
@@ -24,7 +21,8 @@
             <th><%= t(:template) %></th>
             <th><%= t(:company) %></th>
             <th><%= t(:year) %></th>
-            <th><%= t(:warranty) %></th>
+            <th><%= t(:warranty) %> (<%= t(:month) %>)</th>
+            <th><%= t(:warranty_end) %></th>
             <th><%= t(:status) %></th>
             <th colspan="2"></th>
           </tr>
@@ -32,14 +30,15 @@
         <tbody>
           <% @products.each do |product| %>
             <tr>
-              <td><b><u><%= link_to product.name, product %></u></b></td>
+              <td><%= link_to product.name, product %></td>
               <td><%= product.template.name %></td>
               <td><%= product.company %></td>
               <td><%= product.year %></td>
               <td><%= product.warranty %></td>
+              <td><%= product.warranty_end %></td>
               <td><%= t(product.status) %></td>
-              <td><%= link_to 'Edit', edit_product_path(product) %></td>
-              <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: t(:are_you_sure) } %></td>
+              <td><%= link_to t(:edit), edit_product_path(product) %></td>
+              <td><%= link_to t(:delete), product, method: :delete, data: { confirm: t(:are_you_sure) } %></td>
             </tr>
           <% end %>
         </tbody>
