--- a/app/assets/stylesheets/panel/panel.scss
+++ b/app/assets/stylesheets/panel/panel.scss
@@ -14,3 +14,33 @@ td {
 .alert {
   display: none;
 }
+
+.pagination {
+  display: inline-flex !important;
+  border: 5px solid #e9ecef;
+  background-color: #e9ecef;
+  border-radius: 5px;
+  a {
+    background-color: #e9ecef;
+    color: #000;
+    padding: 8px 16px;
+  }
+  a:hover:not(.active) {
+    text-decoration: none;
+    background-color: #FFF;
+    color: #000;
+  }
+  span {
+    background-color: #e9ecef;
+    color: #000;
+    padding: 8px 16px;
+  }
+  span.disabled {
+    color: #868e96;
+  }
+  em {
+    background-color: #007bff;
+    color: #FFF;
+    padding: 8px 16px;
+  }
+}
