--- a/app/views/panel/users.html.erb
+++ b/app/views/panel/users.html.erb
@@ -25,7 +25,7 @@
               <td><%= user.full_name %></td>
               <td><%= user.email %></td>
               <td><%= user.role %></td>
-              <td><%= link_to t(:show), nil %></td>
+              <td><%= link_to t(:show), "/panel/users/#{user.id}" %></td>
               <td><%= link_to t(:edit), nil %></td>
             </tr>
           <% end %>
