--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -1,27 +1,31 @@
-<%= form_with(model: template, local: true) do |form| %>
-  <% if template.errors.any? %>
+<center class="card">
+  <div class="card-body" style="width: 50%">
+    <%= form_with(model: template, local: true) do |form| %>
+    <% if template.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(template.errors.count, "error") %> prohibited this template from being saved:</h2>
 
       <ul>
-      <% template.errors.full_messages.each do |message| %>
+        <% template.errors.full_messages.each do |message| %>
         <li><%= message %></li>
-      <% end %>
+        <% end %>
       </ul>
     </div>
-  <% end %>
+    <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :template_name %>
-  </div>
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, id: :template_name, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :properties %>
-    <%= form.text_field :properties, id: :template_properties %>
-  </div>
+    <div class="form-group">
+      <%= form.label :properties %>
+      <%= form.text_area :properties, id: :template_properties, class: "form-control" %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
+    <div class="form-group">
+      <%= form.submit nil, class: "btn btn-primary" %>
+    </div>
+    <% end %>
   </div>
-<% end %>
+</center>
