--- a/app/views/panel/debits.html.erb
+++ b/app/views/panel/debits.html.erb
@@ -43,7 +43,7 @@
         <%= page_entries_info @debits %>
       </center>
       <center>
-        <%= will_paginate @debits, inner_window: 1, outer_window: 1 %>
+        <%= will_paginate @debits %>
       </center>
     </div>
   </div>
