--- a/app/views/panel/users.html.erb
+++ b/app/views/panel/users.html.erb
@@ -31,6 +31,12 @@
           <% end %>
         </tbody>
       </table>
+      <center>
+        <%= page_entries_info @users %>
+      </center>
+      <center>
+        <%= will_paginate @users %>
+      </center>
     </div>
   </div>
 </div>
