--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -43,6 +43,12 @@
           <% end %>
         </tbody>
       </table>
+      <center>
+        <%= page_entries_info @products %>
+      </center>
+      <center>
+        <%= will_paginate @products %>
+      </center>
     </div>
   </div>
 </div>
