--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -32,6 +32,12 @@
           <% end %>
         </tbody>
       </table>
+      <center>
+        <%= page_entries_info @templates %>
+      </center>
+      <center>
+        <%= will_paginate @templates %>
+      </center>
     </div>
   </div>
 </div>
