--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -18,7 +18,7 @@
       <table class="table table-bordered" width="100%" cellspacing="0">
         <thead>
           <tr>
-            <th>Name</th>
+            <th><%= t(:group_name) %></th>
             <th colspan="2"></th>
           </tr>
         </thead>
@@ -32,6 +32,12 @@
           <% end %>
         </tbody>
       </table>
+      <center>
+        <%= page_entries_info @groups %>
+      </center>
+      <center>
+        <%= will_paginate @groups %>
+      </center>
     </div>
   </div>
 </div>
