--- a/app/views/panel/index.html.erb
+++ b/app/views/panel/index.html.erb
@@ -85,7 +85,7 @@
     <!-- Example Bar Chart Card-->
     <div class="card mb-3">
       <div class="card-header">
-        <i class="fa fa-bar-chart"></i> Bar Chart Example</div>
+        <i class="fa fa-bar-chart"></i> Bar Chart Example (Düzenlenecek)</div>
       <div class="card-body">
         <div class="row">
           <div class="col-sm-8 my-auto">
@@ -110,7 +110,7 @@
     <!-- Example Pie Chart Card-->
     <div class="card mb-3">
       <div class="card-header">
-        <i class="fa fa-pie-chart"></i> Pie Chart Example</div>
+        <i class="fa fa-pie-chart"></i> Pie Chart Example (Düzenlenecek)</div>
       <div class="card-body">
         <canvas id="myPieChart" width="100%" height="100"></canvas>
       </div>
@@ -120,7 +120,7 @@
 <!-- Example DataTables Card-->
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fa fa-table"></i> <%= t(:logs) %></div>
+    <i class="fa fa-table"></i> <%= t(:logs) %> (Düzenlenecek)</div>
   <div class="card-body">
     <div class="table-responsive">
       <table class="table table-bordered" width="100%" cellspacing="0">
