--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,15 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <!-- Bootstrap core CSS-->
   <link href="/sb-admin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom fonts for this template-->
   <link href="/sb-admin/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <!-- Page level plugin CSS-->
   <link href="/sb-admin/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-  <!-- Custom styles for this template-->
   <link href="/sb-admin/css/sb-admin.css" rel="stylesheet">
   <link href="/sb-admin/vendor/toastr/toastr.min.css" rel="stylesheet" type="text/css">
 
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
-  <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <a class="navbar-brand" href="/">Envanter</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,37 +32,43 @@
             <span class="nav-link-text"><%= t(:dashboard) %></span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My Debits">
+          <a class="nav-link" href="/panel/my_debits">
+            <i class="fa fa-fw fa-table"></i>
+            <span class="nav-link-text"><%= t(:my_debits) %></span>
+          </a>
+        </li>
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Users">
           <a class="nav-link" href="/panel/users">
             <i class="fa fa-fw fa-user-circle"></i>
             <span class="nav-link-text"><%= t(:users) %></span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Products">
           <a class="nav-link" href="/products">
             <i class="fa fa-fw fa-cube"></i>
             <span class="nav-link-text"><%= t(:products) %></span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Templates">
           <a class="nav-link" href="/templates">
             <i class="fa fa-fw fa-hashtag"></i>
             <span class="nav-link-text"><%= t(:product_templates) %></span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Groups">
           <a class="nav-link" href="/groups">
             <i class="fa fa-fw fa-group"></i>
             <span class="nav-link-text"><%= t(:groups) %></span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Debits">
           <a class="nav-link" href="/panel/debits">
             <i class="fa fa-fw fa-database"></i>
             <span class="nav-link-text"><%= t(:debits) %></span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Logs">
           <a class="nav-link" href="/panel/logs">
             <i class="fa fa-fw fa-info-circle"></i>
             <span class="nav-link-text"><%= t(:logs) %></span>
