Fixes for debits

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,6 @@
   <link href="/sb-admin/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
   <link href="/sb-admin/css/sb-admin.css" rel="stylesheet">
   <link href="/sb-admin/vendor/toastr/toastr.min.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -223,7 +222,10 @@
       </div>
     </div>
     <!-- Bootstrap core JavaScript-->
-    <script src="/sb-admin/vendor/jquery/jquery.min.js"></script>
+    <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     <script src="/sb-admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Core plugin JavaScript-->
     <script src="/sb-admin/vendor/jquery-easing/jquery.easing.min.js"></script>
