Added feature of removing pending debit request. Also other fixes.

--- a/app/views/panel/my_debits.html.erb
+++ b/app/views/panel/my_debits.html.erb
@@ -29,9 +29,9 @@
             <td>
               <% if debit.pending? %>
               <% if debit.start.nil? %>
-              <%= link_to t(:confirm_to_debit), confirm_my_debit_path(debit_id: debit.id) %>
+              <%= link_to t(:confirm_to_debit), confirm_my_debit_path(debit_id: debit.id), class: "btn btn-sm btn-success" %>
               <% else %>
-              <%= link_to t(:confirm_to_remove), confirm_my_debit_path(debit_id: debit.id) %>
+              <%= link_to t(:confirm_to_remove), confirm_my_debit_path(debit_id: debit.id), class: "btn btn-sm btn-danger" %>
               <% end %>
               <% else %>
               <%= t(debit.status) %>
