--- a/app/views/panel/my_debits.html.erb
+++ b/app/views/panel/my_debits.html.erb
@@ -7,7 +7,7 @@
 
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fa fa-database"></i> <%= t(:listing_debits) %>
+    <i class="fa fa-database"></i> <%= t(:personal_debits) %>
   </div>
   <div class="card-body">
     <div class="table-responsive">
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @debits.each do |debit| %>
+          <% @my_debits.each do |debit| %>
           <tr>
             <td><%= debit.product.name %></td>
             <td><%= debit.start || "-" %></td>
@@ -42,10 +42,58 @@
         </tbody>
       </table>
       <center>
-        <%= page_entries_info @debits %>
+        <%= page_entries_info @my_debits %>
       </center>
       <center>
-        <%= will_paginate @debits %>
+        <%= will_paginate @my_debits %>
+      </center>
+    </div>
+  </div>
+</div>
+
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fa fa-database"></i> <%= t(:groups_debits) %>
+  </div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-bordered" width="100%" cellspacing="0">
+        <thead>
+          <tr>
+            <th><%= t(:product) %></th>
+            <th><%= t(:group) %></th>
+            <th><%= t(:start_date) %></th>
+            <th><%= t(:end_date) %></th>
+            <th><%= t(:status) %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @my_groups_debits.each do |debit| %>
+          <tr>
+            <td><%= debit.product.name %></td>
+            <td><%= debit.group.name %></td>
+            <td><%= debit.start || "-" %></td>
+            <td><%= debit.end || "-" %></td>
+            <td>
+              <% if debit.pending? && !current_user.staff?  %>
+                <% if debit.start.nil?%>
+                  <%= link_to t(:confirm_to_debit), confirm_debit_of_my_group_path(debit_id: debit.id), class: "btn btn-sm btn-success" %>
+                <% else %>
+                  <%= link_to t(:confirm_to_remove), confirm_debit_of_my_group_path(debit_id: debit.id), class: "btn btn-sm btn-danger" %>
+                <% end %>
+              <% else %>
+                <%= t(debit.status) %>
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <center>
+        <%= page_entries_info @my_groups_debits %>
+      </center>
+      <center>
+        <%= will_paginate @my_groups_debits %>
       </center>
     </div>
   </div>
