--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -49,6 +49,11 @@
     </div>
 
     <div class="form-group">
+      <%= form.label :bill %>
+      <%= form.file_field :bill, id: :product_bill, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
       <%= form.submit nil, class: "btn btn-primary" %>
     </div>
     <% end %>
