--- a/app/views/products/confirmation_operations.html.erb
+++ b/app/views/products/confirmation_operations.html.erb
@@ -38,7 +38,7 @@
               <td><%= product.warranty %></td>
               <td><%= product.warranty_end %></td>
               <td><%= t(product.status) %></td>
-              <td><%= t('confirmation_' + product.confirmation.to_s) %></td>
+              <td><%= link_to t(:confirm), nil, data: { confirm: t(:are_you_sure) } %></td>
               <td><%= link_to t(:edit), edit_product_path(product) %></td>
               <td><%= link_to t(:delete), product, method: :delete, data: { confirm: t(:are_you_sure) } %></td>
             </tr>
