--- a/app/views/products/filtered.html.erb
+++ b/app/views/products/filtered.html.erb
@@ -7,7 +7,7 @@
 
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fa fa-cube"></i> <%= t(:listing_products) %>
+    <i class="fa fa-cube"></i> <%= t(@status) + ' ' + t(:listing_products) %>
     <div class="pull-right">
       <%= link_to t(:new_product), new_product_path, class: "btn btn-sm btn-primary" %>
     </div>
@@ -23,7 +23,6 @@
             <th><%= t(:year) %></th>
             <th><%= t(:warranty) %> (<%= t(:month) %>)</th>
             <th><%= t(:warranty_end) %></th>
-            <th><%= t(:status) %></th>
             <th><%= t(:confirmation) %></th>
             <th colspan="2"></th>
           </tr>
@@ -37,7 +36,6 @@
               <td><%= product.year %></td>
               <td><%= product.warranty %></td>
               <td><%= product.warranty_end %></td>
-              <td><%= t(product.status) %></td>
               <td><%= t('confirmation_' + product.confirmation.to_s) %></td>
               <td><%= link_to t(:edit), edit_product_path(product) %></td>
               <td><%= link_to t(:delete), product, method: :delete, data: { confirm: t(:are_you_sure) } %></td>
