Added debit document suitable for printing.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
           </a>
           <ul class="sidenav-second-level" id="collapseMulti">
             <li>
-              <a href="/products/confirmation_operations"><%= t(:all_products) %></a>
+              <a href="/products"><%= t(:all_products) %></a>
             </li>
             <li>
               <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti2"><%= t(:filtered) %></a>
@@ -76,7 +76,7 @@
               </ul>
             </li>
            <li>
-              <a href="/products"><%= t(:confirmation_operations) %></a>
+              <a href="/products/confirmation_operations"><%= t(:confirmation_operations) %></a>
             </li>
           </ul>
         </li>
