--- a/app/views/panel/my_debits.html.erb
+++ b/app/views/panel/my_debits.html.erb
@@ -98,3 +98,7 @@
     </div>
   </div>
 </div>
+
+<center>
+  <a class= "btn btn-md btn-primary" href="/panel/my_debits_for_print" target="_blank" >Yazdır</a>
+</center>
